<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">锐达快车</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="car_use_title">我要用车</string>
    <string name="destination_button">输入目的地</string>
    <string name="cancel_button">取消</string>
    <string name="destination_title">请输入目的地</string>
    <string name="callCartitle1">打车</string>
    <string name="callCartitle2">预约打车</string>
    <string name="callCartitle3">接机场</string>
    <string name="callCartitle4">送机场</string>
    <string name="appointment_time">预约日期</string>


    <!--载入动画dialog相关的字_09-->
    <string name="click_to_refresh_08"><Data><![CDATA[网络连接失败，点击<font color="#e7383e">重试</font>]]></Data></string>
    <string name="no_data_08">本页无数据</string>
    <string name="catg_refreshing_08">正在加载&#8230;</string>
    <string name="nodatatext1">您还没有发出配件采购需求</string>
    <string name="nodatatext2">请使用"配件云购"采购</string>
    <string name="nodatatext3">让所有配件商同时给你报价</string>

    <string name="nooffertext1">目前还没有商家报价</string>
    <string name="nooffertext2">请稍等片刻</string>
    <string name="nooffertext3">目前商家已收到采购信息正积极准备报价</string>
    <string name="loading">加载中...</string>


    <!--关于我们-->
    <!--  <string name="shuoming">就爱车平台承诺:在平台交易原厂件保证纯原厂，原厂件、电器件无质保；品牌件、副厂件质保90天，拆车件质保30天；质保期结束，采购方可以追加评价。"货站代收""微信支付"平台记录每笔交易。</string>
    <string name="shuoming1">1、一切移动客户端用户在下载并浏览锐达快车APP软件时均被视为已经仔细阅读本条款并完全同意。凡以任何方式登陆本APP，或直接、间接使用本APP资料者，均被视为自愿接受本网站相关声明和用户服务协议的约束。</string>
    <string name="shuoming10">10、锐达快车APP使用者在使用退货功能时，请使用快递将配件返回给卖家，方便双方快速 并有依据的完成交易。</string>
    <string name="shuoming11">11、锐达快车APP使用者在脱离线上交易产生的纠纷，就爱车不负责处理。</string>
    <string name="shuoming12">10、本声明未涉及的问题请参见国家有关法律法规，当本声明与国家有关法律法规冲突时，以国家法律法规为准。</string>
    <string name="shuoming13">11、本网站相关声明版权及其修改权、更新权和最终解释权均属锐达快车APP所有。</string>
    <string name="shuoming14">哈尔滨锐达汽车租赁有限公司</string>
    <string name="shuoming2">2、锐达快车APP转载的内容并不代表锐达快车APP之意见及观点，也不意味着本网赞同其观点或证实其内容的真实性。</string>
    <string name="shuoming3">3、锐达快车APP转载的文字、图片、音视频等资料均由本APP用户提供，其真实性准确性和合法性由信息发布人负责。锐达快车APP不提供任何保证，并不承担任何法律责任。</string>
    <string name="shuoming4">4、锐达快车APP所转载的文字、图片、音视频等资料，如果侵犯了第三方的知识产权或其他权利，责任由作者或转载者本人承担，本APP对此不承担责任。</string>
    <string name="shuoming5">5、锐达快车APP不保证为向用户提供便利而设置的外部链接的准确性和完整性，同时，对于该外部链接指向的不由锐达快车APP实际控制的任何网页上的内容，锐达快车APP不承担任何责任。</string>
    <string name="shuoming6">6、用户明确并同意其使用锐达快车APP网络服务所存在的风险将完全由其本人承担；因其使用锐达快车APP网络服务而产生的一切后果也由其本人承担，锐达快车APP对此不承担任何责任。</string>
    <string name="shuoming7">7、除锐达快车APP注明之服务条款外，其它因不当使用本APP而导致的任何意外、疏忽、合约毁坏、诽谤、版权或其他知识产权侵犯及其所造成的任何损失，锐达快车APP概不负责，亦不承担任何法律责任。</string>
    <string name="shuoming8">8、对于因不可抗力或因黑客攻击、通讯线路中断等锐达快车APP不能控制的原因造成的网络服务中断或其他缺陷，导致用户不能正常使用瑞达快车APP，锐达快车APP不承担任何责任，但将尽力减少因此给用户造成的损失或影响。</string>
    <string name="shuoming9">9、锐达快车APP是一款方便市民出行解决出行问题的一套完整的解决方案。</string>
    <string name="shuomingtitle">锐达快车APP免责声明</string>-->
    <string name="shuoming">就爱车平台承诺:在平台交易原厂件保证纯原厂，原厂件、电器件无质保；品牌件、副厂件质保90天，拆车件质保30天；质保期结束，采购方可以追加评价。"货站代收""微信支付"平台记录每笔交易。</string>

    <string name="shuoming1">1、快车服务\n
哈尔滨锐达汽车租赁有限公司(以下称“我们”)作为快车运营平台向您提供快车服务。</string>
    <string name="shuoming10">10、锐达快车APP使用者在使用退货功能时，请使用快递将配件返回给卖家，方便双方快速 并有依据的完成交易。</string>
    <string name="shuoming11">11、锐达快车APP使用者在脱离线上交易产生的纠纷，就爱车不负责处理。</string>
    <string name="shuoming12">9、本声明未涉及的问题请参见国家有关法律法规，当本声明与国家有关法律法规冲突时，以国家法律法规为准。</string>
    <string name="shuoming13">10、本网站相关声明版权及其修改权、更新权和最终解释权均属锐达快车APP所有。</string>
    <string name="shuoming14">哈尔滨锐达汽车租赁有限公司</string>
    <string name="shuoming2">2、协议的达成\n
您下载本应用软件并成功注册后，即被视为已阅读、理解本协议，并同意跟我们达成本协议，您在使用我们服务过程中的具体权利义务适用本用户协议中的约定。</string>
    <string name="shuoming3">3、您的保证\n
            您在下载本应用程序及接受服务前，您须作出如下保证：\n
            a) 您注册时提供的个人信息及移动电话号码真实有效；\n
            b) 您出于个人用途下载应用程序或使用服务，不会转售给第三方，但经我们同意开通亲情账户的除外；\n
            c) 您不会利用服务或应用程序侵犯他人合法权益；\n
            d) 您不会利用服务或应用程序影响网络的正常运行；\n
            e) 您不会恶意危害服务或应用程序；\n
            f) 您不会利用服务或应用程序进行违法犯罪活动；\n
            g) 您不会携带易燃易爆危险物品及其他危害公共安全的物品；\n
            h) 您不会携带宠物及其他污损车辆的物品；\n
            i) 您将遵守所在地法律规定；\n
            j) 您具备相应的民事行为能力。\n
            如您违反以上任一规则，我们保留立即终止向您提供服务并拒绝您使用应用程序的权利。</string>
    <string name="shuoming4">4、用车服务\n
1) 预订流程\n
您向锐达快车运营平台发出用车服务请求（包括但不限于指定车型、用车时间、用车地点）后，我们会即刻根据您的服务请求提供车辆。一旦您预订服务成功，我们将以APP消息推送方式通知您，确认预定成功。\n
2) 用车规则\n
用车规则详见APP上所载“常见问题解答”中的相关内容，包括但不限于订单修改、行车路线和收费标准等。我们将不经另行通知，视情况不时调整相关用车规则，故请您经常留意APP上相关内容的变化。
鉴于本APP主要提供网络预约快车服务，为更快更准确地为您提供服务，您在首次使用或安装APP时应手动确认是否允许我们使用您的地理位置。在您每次点击用车服务相关请求时，视为您已同意我们知悉您的地理位置信息。</string>
    <string name="shuoming5">5、支付费用\n
您可以通过锐达快车运营平台查看快车的服务价格，这些价格可能会不经另行通知不时进行调整。在您开始用车服务前，请您留意当时的服务价格，一旦您选择接受服务，即应按对应的价格标准承担付款义务。
针对快车服务，我们将向您收取用车服务费（其中包括驾驶服务费、车辆使用费等）。您可以通过以下方式进行支付：
您可以在您的锐达快车账户内通过银行卡，微信、支付宝等第三方平台预存一定金额；每次用车服务结束后，我们将直接从您预存的金额中扣付您应付的用车服务费用。</string>
    <string name="shuoming6">6、责任\n
我们向您提供的预订信息仅供您参考，并不构成保证。我们将在合理的范围内尽力保证该等信息准确，但无法保证其中没有任何错误。
您通过锐达快车运营平台请求的快车服务的质量由我们负责控制和监督，相应责任由我们负责承担。
如发生延误等非交通事故情况，且该等延误系基于不可抗力等非人为因素产生的（包括但不限于：大雾、雷雨、沙尘、道路积雪、结冰、低能见度等危及行车安全的恶劣气象条件；洪涝、台风、冰雹、暴雪、地震、山体崩塌、滑坡、泥石流、海啸等自然灾害；公安机关交通管理部门在集会游行、大型运动会、道路桥梁建设、救灾抢险、执行重要警卫任务等情况下执行的交通管制等），因此造成您的损失，我们将不承担任何责任。如延误系基于锐达快车或其驾驶人员的原因导致的，您有权根据具体的车辆原因或驾驶员原因相应地向我们主张权利。
我们重视您的每一次乘车体验，如您确实由于上述锐达快车或其驾驶员导致的延误而发生了损失，我们将向您进行相应赔偿或补偿，赔偿或补偿的金额最高不超过当次订单金额的四倍。
您在用车过程中如有违约行为，相关责任将由您承担。</string>
    <string name="shuoming7">7、用户信息的使用\n
我们不强制收集用户个人信息，仅会要求您提供预约车辆服务所必须的移动电话号码，用于发送车辆预约订单以及与司机联系，您的电话号码会通过后台系统自动转换为随机号码，司机无法直接获取。除手机号码外，您的头像、姓名、性别、生日、邮箱、信用卡等信息均为选填信息，您可以选择是否填写。如您填写上述信息，我们也仅会从为您提供更好服务的角度使用上述信息，如无您的确认及同意，我们不会将上述信息用于网络预约快车服务以外的其他用途。</string>
    <string name="shuoming8">8、合约期限及变更、终止\n
我们和您订立的这份协议是无固定期限协议。
您有权在结清全部应付费用后，随时通过永久性删除移动设备上安装的应用程序来终止协议。
我们保留随时修改或替换本《用户协议》，或者更改、暂停服务及应用程序（包括但不限于任何功能、数据库或内容）的权利。届时，我们将通知您即可，通知途径如下：\n
a.在网站或锐达快车运营平台上发布通知，通知一经发布即视为已经送达给您；或\n
b.按照您登陆的手机号码进行短信通知。
本《用户协议》适用中国法律，关于本《用户协议》履行中发生的任何争议，由我公司所在地人民法院管辖。 </string>
    <string name="shuoming9">9、锐达快车APP是一款方便市民出行解决出行问题的一套完整的解决方案。</string>
    <string name="shuomingtitle1">尊敬的客户，在您下载本应用程序（下称“APP”）使用我们的服务前，请仔细阅读本用户协议（以下简称“用户协议”）。另附特别说明如下，提请您注意。\n </string>
    <string name="shuomingtitle2">用户协议条款\n</string>

    <string name="changjianwenti1">关于注册</string>
    <string name="changjianwenti1_1">
        问：如何开通锐达快车账户？
        \n答：锐达快车账户以手机号作为账号，支持中国及境外手机号。您可以通过App注册，通过验证后，开通账户。目前暂不支持email注册。\n
        \n
        关于服务选项\n
        问：锐达快车提供哪些服务？\n
        答：我们的服务包括立即叫车、接送机、预约用车。\n
        问：可以跨城提供服务吗？\n
        答：暂时不可以，前期只提供哈尔滨市内及周边区县服务；后期会开通跨城服务。\n

        \n
        关于预订流程\n
        问：如何预订锐达快车服务？\n
        答：在开通锐达快车账户后，您可以通过锐达快车App等预订。下单成功后，我们会通过App和短信通知您，同时您可以在App里看到车辆的实时位置。\n
        问：修改订单需要重新下单吗？\n
        答：如服务还未开始前，您需更换服务类型、用车时间，需要取消原订单，重新预订。如在服务中，您可修改下车地点。\n
        问：修改订单会产生费用吗？\n
        答：取消订单可能会产生违约金，详见“关于收费”部分内容。\n
        问：下单时，我的账户里需要有足够的余额支付预估金额吗？\n
        答：下单时，您的账户里需要有足够的余额，用于支付当次行程的用车费，或可以通过驾驶员让其进行代客充值，否则无法提供服务。\n
        问：预订接机服务时，必须填写航班号吗？\n
        答：不是必须填，遇航班延误时，无论延误多少小时，我们都免费等候。如果您只填写预计上车时间，我们将按一般预约用车对待，并按一般预约用车计算相关费用。（一般预约用车的等待规则和收费规则，请见“关于等候 –非接机订单，到达出发地后，等候时间有多长？如何计费？”和“关于费用 – 什么情况下会产生取消费？如何收取？”） \n</string>


    <string name="changjianwenti2">关于等候</string>
    <string name="changjianwenti2_2">
        问：非接机订单，到达出发地后，等候时间有多长？如何计费？\n
        答：非接机订单包括立即叫车和预约用车。立即叫车我们将在驾驶员到达出发地后免费等待您10分钟，预约用车我们将按照您输入的预计上车时间达到后免费等待您10分钟，之后按用车收费规则计费。如果驾驶员到达出发地后联系不到您，且等待时间超过15分钟，该订单将被取消，且您会被收取相应的取消费。（关于取消费，请见“关于费用–什么情况下会产生取消费？如何收取？”）\n
         \n
        问：接机订单，等待时间有多长？如何计费？\n
        答：填写航班号，可享受航班实际到港前的免费等候；遇航班延误时，我们免费等候。如果您没有填写航班号，只填写了预计上车时间，我们将在预计上车时间后免费等待您10分钟，之后将按用车收费规则计费。如等待时间超过10分钟，且驾驶员无法联系到您，该订单将被取消，将收取您起租价作为取消费。（关于取消费，请见“关于费用–什么情况下会产生取消费？如何收取？”）\n
         \n
        问：途中停靠、等待的时间收费吗？\n
        答：等待时间包含在用车时间里，将正常收费。</string>
    <string name="changjianwenti3">关于用车</string>
    <string name="changjianwenti3_3">
        问：驾驶员怎么规划路线？\n
        答：驾驶员一般会根据导航或经验选择比较快捷的路线；若您有偏好的线路，驾驶员将按您的指定路线行驶。\n

        问：服务开始后，可以变更用车时间、地点吗？\n
        答：服务开始后，若需略微变更行程，您可以和驾驶员沟通。若行程变动较大，驾驶员将按要求暂停行驶，修改订单。若行程更改后，您的账户余额不足支付预估费用，您需要在再次启程前补足不足部分，驾驶员方可继续行驶。\n
        关于收费（具体计费说明见下表1）\n
        问：什么情况下会产生取消费？如何收取？\n
        答：两种情况下会产生取消费：\n1、驾驶员已到达约定出发地，由于客户自身的原因取消订单，\n2、驾驶员已到达出发地，等待超时后，客户仍未出现且无法联系，订单将被取消。因前述原因订单取消的，客户需要支付取消订单的违约金，具体违约金数额参见下单前的页面提醒。\n
        问：服务中会产生什么附加费用？\n
        答：正常情况下，附加费用包括但不限于：\n1、清洁费：有车内呕吐等严重污损时产生；\n2、停车费、路桥费：按服务中实际产生的第三方费用乘以相应倍数进行收取（具体倍数以预定时系统显示为准）；\n3、连续多日订单，驾驶员需要陪同过夜的情况：客户需按200元/晚的标准支付食宿费。附加费用将在服务结束时和用车费用一同计入您的账单。\n
        问：对账单有疑议怎么办？\n
        答：若对费用有疑议，您可以在收到短信收费通知后致电4000765456，或在App联系客服人员为您解决。\n
        关于支付和发票\n
        问：如何支付用车费用？\n
        答：个人客户仅可使用账户余额进行支付；企业客户可按协议约定方式支付，企业客户的授权员工还可通过选择企业账号下的“公差用车”支付。\n
        问：账户充值有额度要求吗？\n
        答：单次充值没有额度要求。每次行程开始前，您需确保您的账户余额高于该行程预估金额，不足时需要充值。\n
        问：如何使用优惠券？\n
        答：提交订单时，您可以选择符合条件的优惠券。您无选择操作时，系统将默认使用符合条件中最接近过期日期的代金券。\n
        问：如何开具发票？\n
        答：充值的金额，都可以开发票；优惠券和赠送的金额，不能开发票。您需通过App提交开票信息，我们将在5个工作日内安排快递，单次快递的发票金额总计不超过200元时，您需要按照实际产生的快递费用金额支付快递费；单次快递的发票金额共计满200元时可免快递费。</string>


</resources>
