<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/transparent" >
    <!--正在加载-->
    <LinearLayout
        android:id="@+id/ll_loading"
        android:padding="10dp"
        android:visibility="visible"
        android:background="@drawable/dialog_09_loading_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/loading_dialog_09"
            />

        <TextView
            android:id="@+id/tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/catg_refreshing_08"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
    <!--无网络-->
    <RelativeLayout
        android:id="@+id/rl_error"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <ImageView
            android:id="@+id/tv_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/no_net_09"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />
        <TextView
            android:id="@+id/tv_error"
            android:layout_below="@+id/tv_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>
    <!--无数据-->
    <RelativeLayout
        android:id="@+id/rl_nodata"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <!--<ImageView
            android:id="@+id/iv_nodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/no_data_09"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"

            />-->
        <TextView
            android:id="@+id/tv_nodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="没有获取到数据"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"

            />



    </RelativeLayout>
    <!--无采购-->
    <RelativeLayout
        android:id="@+id/rl_nodbuy"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <!--<ImageView
            android:id="@+id/iv_nodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/no_data_09"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"

            />-->
        <TextView
            android:id="@+id/iv_nobuy1"
            android:textColor="@color/black"
            android:text="@string/nodatatext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/iv_nobuy2"
            android:textColor="@color/black"
            android:layout_below="@+id/iv_nobuy1"
            android:text="@string/nodatatext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/iv_nobuy3"
            android:textColor="@color/black"
            android:layout_below="@+id/iv_nobuy2"
            android:text="@string/nodatatext3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/iv_nobuy4"
            android:layout_below="@+id/iv_nobuy3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>
    <!--无报价-->
    <RelativeLayout
        android:id="@+id/rl_nooffer"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/tv_nooffer1"
            android:textColor="@color/black"
            android:text="@string/nooffertext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/tv_nooffer2"
            android:textColor="@color/black"
            android:layout_below="@+id/tv_nooffer1"
            android:text="@string/nooffertext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/tv_nooffer3"
            android:textColor="@color/black"
            android:layout_below="@+id/tv_nooffer2"
            android:text="@string/nooffertext3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            />



    </RelativeLayout>


</RelativeLayout>